# flozAI

./: .gitignore  Dockerfile  README.md  SUPABASE_README.md  docker-compose.yml  main.py  pyproject.toml  pytest.ini  requirements.txt  test_intent.py  test_server.py  test_validate.py
config/: capabilities.yaml
docs/: GETTING_STARTED_CHECKLIST.md  SUPABASE_INTEGRATION_GUIDE.md  SUPABASE_INTEGRATION_SUMMARY.md  SUPABASE_QUICKSTART.md  api_documentation.md  architecture.md  database_schema.sql  example_api_routes.py
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  index.css
frontend/src/components/: WorkflowDashboard.css  WorkflowDashboard.jsx
frontend/src/hooks/: useAppData.js  useWorkflowAnalyzer.js  useWorkflows.js
frontend/src/services/: api.js  authService.js  databaseService.js  supabaseClient.js
frontend/src/styles/: global.css
scripts/: test_api.py  test_intent_parser.py  test_llm_client.py  test_validator.py  test_workflow_builder.py  validate_capabilities.py
src/: test_wf.py
src/flozai.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/flozai/api/: routes.py  supabase_routes.py
src/flozai/core/: condition_evaluator.py  condition_parser.py  executor.py  integration_registry.py  integrations.py  intent_parser.py  oauth.py  validator.py  workflow_builder.py
src/flozai/prompts/: system_prompt.md
tests/: conftest.py
tests/integration/: test_end_to_end.py  test_multi_tenant.py
tests/unit/: test_executor.py  test_integrations.py  test_mock_handlers.py  test_schemas.py  test_validator.py
(+95 files in other folders)
