[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "flozai"
version = "0.1.0"
description = "AI reasoning layer for workflow automation"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.104.0",
    "anthropic>=0.18.0",
    "pydantic>=2.5.0",
    "pyyaml>=6.0",
    "uvicorn>=0.24.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "black>=23.11.0",
    "ruff>=0.1.6",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
